# bud

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  279ecb411262_.py  5fe3177778e0_.py
bud/: auth.py  cli.py  config.py  credentials.py  database.py  filter.py  main.py
bud/commands/: accounts.py  auth.py  budgets.py  categories.py  config_store.py  credentials.py  db.py  db_commands.py  forecasts.py  projects.py  recurrences.py  reports.py  sync.py  transactions.py  utils.py
bud/models/: __init__.py  account.py  budget.py  category.py  forecast.py  project.py  recurrence.py  transaction.py  user.py
bud/routers/: accounts.py  auth.py  budgets.py  categories.py  forecasts.py  projects.py  reports.py  transactions.py  users.py
bud/schemas/: __init__.py  account.py  auth.py  budget.py  category.py  forecast.py  project.py  recurrence.py  report.py  transaction.py  user.py
bud/services/: accounts.py  budgets.py  categories.py  forecasts.py  projects.py  recurrences.py  reports.py  storage.py  transactions.py  users.py
scripts/: auto-update.sh  bud-auto-update.service  bud-auto-update.timer
skills/bud/: SKILL.md
tests/: conftest.py  test_accounts_command.py  test_accounts_service.py  test_auth.py  test_credentials.py  test_db_commands.py  test_filter.py  test_forecasts_command.py  test_project_utils.py  test_projects_command.py  test_projects_service.py  test_recurrences.py  test_sync.py  test_transactions_command.py  test_transactions_service.py
