[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bud"
version = "0.1.0"
description = "Budget management CLI and API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "click>=8.3.1",
    "fastapi>=0.129.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "tabulate>=0.9.0",
]

[project.scripts]
bud = "bud.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
