[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bud"
version = "0.1.0"
description = "Budget management CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.19.0",
    "bcrypt>=4.0.0",
    "click>=8.3.1",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.46",
    "tabulate>=0.9.0",
]

[project.scripts]
bud = "bud.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
