[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bud"
version = "0.1.0"
description = "Budget management CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.19.0",
    "bcrypt>=4.0.0",
    "boto3>=1.34.0",
    "click>=8.3.1",
    "google-cloud-storage>=2.14.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.46",
    "tabulate>=0.9.0",
]

[project.scripts]
bud = "bud.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (run after unit tests)",
]
